# django-grpc-extra

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  sitemap.xml
.github/release-notes/: v0.1.0b1.md
.github/workflows/: docs-deploy.yml  publish.yml  test.yml
commands/generate-client-sdk/: index.html
commands/generate-proto/: index.html
commands/init-grpc/: index.html
commands/run-grpcserver/: index.html
core/authentication/: index.html
core/decorators/: index.html
core/permissions/: index.html
core/runtime/: index.html
core/server/: index.html
core/testing/: index.html
docs/: faq.md  index.md  installation.md  quickstart.md
docs/commands/: generate-client-sdk.md  generate-proto.md  init-grpc.md  run-grpcserver.md
docs/core/: authentication.md  decorators.md  permissions.md  runtime.md  server.md  testing.md
docs/migration/: notes.md
docs/model-service/: filtering.md  overview.md  pagination.md  searching-ordering.md
docs/reference/: errors.md  settings.md
faq/: index.html
grpc_extra/: __init__.py  adapters.py  apps.py  auth.py  codec.py  constants.py  decorators.py  exceptions.py  main.py  ordering.py  pagination.py  permissions.py  registry.py  request_logging.py  schemas.py  searching.py  settings.py  utils.py
grpc_extra/management/commands/: generate_client_sdk.py  generate_proto.py  init_grpc.py  run_grpcserver.py
grpc_extra/model/: __init__.py  data_helper.py  filtering.py  schemas.py  service.py
grpc_extra/sdk/: __init__.py  generators.py
grpc_extra/testing/: __init__.py  client.py  context.py  pb2.py  response.py
installation/: index.html
migration/notes/: index.html
model-service/filtering/: index.html
model-service/overview/: index.html
model-service/pagination/: index.html
model-service/searching-ordering/: index.html
quickstart/: index.html
reference/errors/: index.html
reference/settings/: index.html
search/: search_index.json
tests/: conftest.py  test_adapters.py  test_auth.py  test_codec.py  test_decorators.py  test_generate_client_sdk.py  test_generate_proto.py  test_generate_proto_command.py  test_main_runtime.py  test_model_data_helper.py  test_model_filtering.py  test_model_service.py  test_ordering_searching.py  test_pagination.py  test_permissions.py  test_request_logging.py  test_run_grpcserver_command.py  test_run_server.py  test_support_modules.py  test_testing.py
