[build-system]
requires = ["flit_core>=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-grpc-extra"
version = "0.2.3"
description = "Decorator-based gRPC integration for Django."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Vitaly Furtsev", email = "vitalyfur@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Web Environment",
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Topic :: Internet",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "Django>=3.2",
  "pydantic>=2.0",
  "grpcio>=1.50",
  "protobuf>=4.25",
  "typing-extensions>=4.7",
]

[project.urls]
Homepage = "https://github.com/QtiQla/django-grpc-extra"
Documentation = "https://qtiqla.github.io/django-grpc-extra/"

[project.optional-dependencies]
codegen = ["grpcio-tools>=1.50", "googleapis-common-protos>=1.63"]
sdk = ["grpcio-tools>=1.50", "googleapis-common-protos>=1.63"]
health = ["grpcio-health-checking>=1.50"]
reflection = ["grpcio-reflection>=1.50"]
reload = ["watchfiles>=0.21"]
dev = ["pytest>=7", "pytest-django>=4"]

[tool.flit.module]
name = "grpc_extra"
